# ow-hero-stats

./: .gitignore  README.md  open-website.cmd  pyproject.toml
.github/workflows/: pages.yml  tests.yml
data/output/: ana.json  anran.json  ashe.json  baptiste.json  bastion.json  brigitte.json  cassidy.json  d-va.json  domina.json  doomfist.json  echo.json  emre.json  freja.json  genji.json  hanzo.json  hazard.json  heroes.json  illari.json  jetpack-cat.json  junker-queen.json  junkrat.json  juno.json  kiriko.json  l-cio.json  lifeweaver.json  mauga.json  mei.json  mercy.json  mizuki.json  moira.json  orisa.json  pharah.json  ramattra.json  reaper.json  reinhardt.json  roadhog.json  shion.json  sierra.json  sigma.json  sojourn.json  (+13 more)
overwatch_stats/: __init__.py  audit.py  cli.py  export_json.py  fandom_client.py  images.py  models.py  normalize.py  overrides.py  parse_stats.py  web_export.py
scripts/: open-website.ps1
site/: index.html
site/src/: damage-model.js  gameplay-notes-cleanup.js  main.js  styles.css
tests/: test_audit.py  test_damage_model.py  test_fandom_client.py  test_fixture_normalize.py  test_images.py  test_normalize.py  test_parse_stats.py  test_real_damage_model.py  test_real_data_fixture.py  test_static_viewer.py  test_web_export.py
tests/fixtures/: ashe_cargo_sample.json
tests/fixtures/heroes/: README.md  junkrat.json  reaper.json  sojourn.json  torbj-rn.json  vendetta.json  zarya.json
