[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ow-hero-stats"
version = "0.1.0"
description = "Export and audit Overwatch hero stats from the Overwatch Fandom Cargo API."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
]

[tool.setuptools.packages.find]
include = ["overwatch_stats*"]

[tool.ruff]
line-length = 120
